--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -31,6 +31,6 @@ jobs:
 
       - name: Compile plugin
         run: |
-          echo -e "\nCompiling multicolors_example.sp..."
-          spcomp -E -w234 -O2 -v2 -i$includePath -i$SCRIPTING_PATH/include multicolors_example.sp
-        working-directory: ${{ env.SCRIPTING_PATH }}/
+          echo -e "\nCompiling test_compile.sp..."
+          spcomp -E -w234 -O2 -v2 -i$includePath -i$SCRIPTING_PATH/include test_compile.sp
+        working-directory: ${{ env.SCRIPTING_PATH }}/tests
